<resources>
    <string name="app_name">eTours</string>
    <string name="sign_up">SIGN UP</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="start">Let\'s Start</string>
    <string name="your_cation">Your Vocation</string>
    <string name="attraction_site">Attaction Site</string>
    <string name="lodges">Lodges</string>
    <string name="car_bars">Cars/Bars</string>
</resources>
