<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".registerActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <EditText
        android:id="@+id/email"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email"

        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    <EditText
        android:id="@+id/name"
       android:layout_margin="10dp"
        android:backgroundTint="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
    <EditText
        android:id="@+id/phone"
        android:layout_margin="10dp"

        android:backgroundTint="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pass"
            android:layout_margin="10dp"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pass1"
            android:layout_margin="10dp"

            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
    </com.google.android.material.textfield.TextInputLayout>
<!--    </com.google.android.material.textfield.TextInputLayout>-->
<!--    -->
<!--    <EditText-->
<!--        android:id="@+id/confirmPass"-->
<!--        android:layout_margin="10dp"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:hint="@string/confirm_password"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"/>-->
    <Button
        android:id="@+id/btnRegister"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:background="@drawable/sign_up_button"
        android:letterSpacing="0.3"/>
    <TextView
        android:id="@+id/already_have_an_account"
        android:textSize="20sp"
        android:gravity="center"
        android:text="Already Have An Account"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>






</LinearLayout>